# SuperLUbench

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.adoc  README.md  cmake_install.cmake  config.inc  config_taurus.inc  link.sh  load_modules.sh
doc/: SuperLUbench.ipynb
doc/taurus_haswell/hqp3_15/Full/: SuperLU_COLAMD.csv  SuperLU_DIST_MMD_ATA.csv  SuperLU_DIST_MMD_AT_PLUS_A.csv  SuperLU_DIST_NATURAL.csv  SuperLU_MMD_ATA.csv  SuperLU_MMD_AT_PLUS_A.csv  SuperLU_MT_COLAMD.csv  SuperLU_MT_MMD_ATA.csv  SuperLU_MT_MMD_AT_PLUS_A.csv
doc/taurus_haswell/hqp3_60/Full/: SuperLU_COLAMD.csv  SuperLU_DIST_MMD_ATA.csv  SuperLU_DIST_MMD_AT_PLUS_A.csv  SuperLU_DIST_NATURAL.csv  SuperLU_MMD_AT_PLUS_A.csv  SuperLU_MT_COLAMD.csv  SuperLU_MT_MMD_ATA.csv  SuperLU_MT_MMD_AT_PLUS_A.csv  SuperLU_NATURAL.csv  hqp3_60_Full_SuperLU_MMD_ATA.csv  hqp3_60_Full_SuperLU_MT_COLAMD.csv  hqp3_60_Full_SuperLU_MT_MMD_ATA.csv  hqp3_60_Full_SuperLU_MT_MMD_AT_PLUS_A.csv
doc/taurus_haswell/scheduling_type_benchmark/: .~lock.14_auto.csv#  14_auto.csv  14_dynamic.csv  14_guided.csv  14_static.csv  28_auto.csv  28_dynamic.csv  28_guided.csv  28_static.csv
example/: b.mtx  x.mtx
include/: Util.h  dreadMM.h
src/: FullUMF_0_A.mtx  Util.c  Util.h  dreadMM.c  dreadMM.h
src/SuperLU/: Makefile  bench.sh  dlinsolx.c  run.sh
src/SuperLU_Dist/: Makefile  bench.sh  pddrive_ABglobal.c  run.sh  runExample.sh
src/SuperLU_MT/: Makefile  bench.sh  pdlinsolx.c  run.sh  runExample.sh
